--- a/TempleUprising.csproj
+++ b/TempleUprising.csproj
@@ -8,6 +8,9 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Content\Items\HelloWorld.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
@@ -18,7 +21,6 @@
     <Folder Include="Assets\Skys\" />
     <Folder Include="Assets\Tiles\" />
     <Folder Include="Assets\UIs\" />
-    <Folder Include="Content\Items\" />
     <Folder Include="Content\NPCs\JungleMonolith\" />
     <Folder Include="Content\NPCs\AwakenedJungleMonolith\" />
     <Folder Include="Content\NPCs\SunDeityStatue\" />
