--- a/TempleUprising.csproj
+++ b/TempleUprising.csproj
@@ -8,9 +8,6 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Content\Items\HelloWorld.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
   </ItemGroup>
   <ItemGroup>
@@ -21,6 +18,7 @@
     <Folder Include="Assets\Skys\" />
     <Folder Include="Assets\Tiles\" />
     <Folder Include="Assets\UIs\" />
+    <Folder Include="Content\Items\" />
     <Folder Include="Content\NPCs\JungleMonolith\" />
     <Folder Include="Content\NPCs\AwakenedJungleMonolith\" />
     <Folder Include="Content\NPCs\SunDeityStatue\" />
